fixes alignment of assignment edit page
we want the fix some inconsistencies in the assignment
edit page

fixes EVAL-2613
flag=

test plan:
- create an assignment
- click on the edit button
- make sure assignment boxes are aligned

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/314202
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Kai Bjorkman <kbjorkman@instructure.com>
Product-Review: Cameron Ray <cameron.ray@instructure.com>

--- a/app/stylesheets/bundles/assignments_edit.scss
+++ b/app/stylesheets/bundles/assignments_edit.scss
@@ -24,6 +24,10 @@
   margin-bottom: 12px;
 }
 
+#edit_assignment_header {
+  padding-bottom: 0px;
+}
+
 #edit-assignment-header-cr-tab-nav {
   display: flex;
   align-items: flex-end;
@@ -87,7 +91,7 @@ div.form-column-right, div.overrides-column-right {
     /* div that applies border styles and hold content */
     /* using bootstrap or other canvas borders */
     border-color: #ccc;
-    padding: 15px 0px;
+    padding: 15px;
     margin-top: 20px;
     select, input[type=text], .subtitle {
       margin-#{direction(left)}: 15px;
@@ -105,7 +109,11 @@ div.form-column-right, div.overrides-column-right {
 
   label:not(.ic-Label), label.date_field {
     margin: 0px;
-    padding: direction-sides(10px 0px 10px 40px);
+    padding: direction-sides(10px 0px 10px 20px);
+  }
+
+  #assignment_group_id, #assignment_grading_type {
+    width: 100%;
   }
 
   .subtitle {
@@ -127,7 +135,7 @@ div.form-column-right, div.overrides-column-right {
       margin-#{direction(left)}: 60px;
     }
     button.Button {
-      margin: direction-sides(7px 0px 0px 40px);
+      margin: direction-sides(16px 0px 0px 0px);
     }
     .nest {
       padding-#{direction(left)}: 20px;
@@ -146,8 +154,12 @@ div.form-column-right, div.overrides-column-right {
   }
 }
 
-.assignment-edit-group-alert, .assignment-edit-external-tool-alert, .assignment-edit-plagiarism-alert{
+.assignment-edit-external-tool-alert, .assignment-edit-plagiarism-alert{
   margin: 15px 20px 0;
+}
+
+.assignment-edit-group-alert{
+  margin-top: 16px;
 }
 
 #discussion-edit-view {
@@ -312,7 +324,6 @@ div.form-column-right, div.overrides-column-right {
 }
 
 #allowed-attempts-target {
-  margin: 15px;
 
   select {
     margin: 0
@@ -320,7 +331,6 @@ div.form-column-right, div.overrides-column-right {
 
   label {
     padding: 0;
-    margin: 0 0 18px 0;
   }
 
   // The hover looks weird in this case
@@ -331,6 +341,8 @@ div.form-column-right, div.overrides-column-right {
 // Increased specificity to override common styles
 #edit_assignment_form .form-actions {
   padding-#{direction(left)}: 10px;
+  margin-bottom: 0;
+
   .pull-left {
     min-width: 300px;
   }
